# TuckerLCBN

./: README.md
LaTeX/: paper.aux  paper.bbl  paper.bib  paper.blg  paper.tex
LaTeX/data/: ExperimentData.csv  ExperimentData_Max.csv  ExperimentData_Mean.csv  ExperimentData_Min.csv  RegSinVecs.csv  SingVecCor.csv  SingularVals.csv  VoxSinVecs.csv
LaTeX/fig/: tucker_model.tex
Matlab/: DistanceMatrix_NP2.m  ExperimentData1.csv  KB_Clustering.py  SingVec_New_3D.csv  corr_3D_HOSVD.m  corr_HOSVD.m  extractData.m  fast_HOSVD.m  realHOSVD.m  saveMatrix.m  save_RightSingVec.m  syntheticHOSVD.m
Matlab/ComputeCorrMat/: ComputeCorrMat.c
Matlab/ComputeCorrMat/CorrMat/: metadata.m  saveMatrix.m  timeSeries.csv
Matlab/ComputeCorrMat/CorrMat/CorrMat/: CMakeLists.txt  main.c
Matlab/ComputeCorrMat/CorrMat/New/: CMakeLists.txt  main.c
Matlab/ComputeCorrMat/blas/: a.out  matrix.c
Matlab/data20190513/: metadata3.m  metadata4.m  metadata5.m  metadata8.m
PPT/: Fast HOSVD.pptx  Thesis_Prst.key  UREACA_Prst.pptx
PPT/URECA_Prst.key/Data/: pasted-image-1190.tiff
PPT/URECA_Prst.key/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
Results/: CorrPairing.csv  DistanceMatrix_raw.csv  ModelsAcc.csv
Results/Clustering /: KB_Clustering.py
Results/ModelAcc/: ModelsAcc_New.csv  ModelsAcc_old.csv
Scripts/: EDA.py  classification.py  corr_pairing.py  util.py
TuckerMPI/: LICENSE  README.md
TuckerMPI/doxygen/: Doxyfile  mainpage.doc
TuckerMPI/examples/mpi/general_reconstruct/: C2.txt  paramfile.txt
TuckerMPI/examples/mpi/generate/: paramfile.txt  rec.txt
TuckerMPI/examples/mpi/reconstruct/: paramfile.txt
TuckerMPI/examples/mpi/sthosvd/: paramfile.txt  raw.txt
TuckerMPI/examples/serial/generalized_reconstruct/: C3.txt  C4.txt
TuckerMPI/examples/serial/reconstruct/: paramfile.txt  rec.txt
TuckerMPI/examples/serial/sthosvd/: paramfile.txt  raw.txt
TuckerMPI/latex/: citations.txt
TuckerMPI/matlab/: plotTuckerSvals.m  processTuckerTimers.m
TuckerMPI/src/: CMakeLists.txt
TuckerMPI/src/input_files/: 11x25.txt  11x25_mult_transp.txt  17x11.txt  17x11_mult.txt  1x7.txt  1x7_mult.txt  2x3x4.txt  2x5.txt  2x5_mult.txt  3x2.txt  3x2_mult_transp.txt  3x5x7x11.txt  3x5x7x11_mm0.txt  3x5x7x11_mm1.txt  3x5x7x11_mm2.txt  3x5x7x11_mm3.txt  3x5x7x11_sc0.txt  3x5x7x11_sc1.txt  3x5x7x11_sc2.txt  3x5x7x11_sc3.txt  3x5x7x11_ss0.txt  3x5x7x11_ss1.txt  3x5x7x11_ss2.txt  3x5x7x11_ss3.txt  4x3.txt  4x3_mult.txt  5x5.txt  5x8.txt  5x8_mult_transp.txt  7x1.txt  7x1_mult_transp.txt  input_test_filename.txt~  input_test_filenames.txt~  io_file0.txt  io_file1.txt  io_file10.txt  io_file2.txt  io_file3.txt  io_file4.txt  io_file5.txt  (+17 more)
TuckerMPI/src/input_files/reconstruction/: paramfile.txt  reconstructed.txt  sthosvd_core.txt  sthosvd_mat_0.txt  sthosvd_mat_1.txt  sthosvd_mat_2.txt  sthosvd_mat_3.txt  sthosvd_size.txt
TuckerMPI/src/input_files/system/serial_noscale_fullrec/generate/: paramfile.txt  rec.txt
TuckerMPI/src/input_files/system/serial_noscale_fullrec/reconstruct/: paramfile.txt
TuckerMPI/src/input_files/system/serial_noscale_fullrec/sthosvd/: paramfile.txt
TuckerMPI/src/mpi/: CMakeLists.txt  TuckerMPI.cpp  TuckerMPI.hpp  TuckerMPI_Distribution.cpp  TuckerMPI_Distribution.hpp  TuckerMPI_IO_Util.hpp  TuckerMPI_Map.cpp  TuckerMPI_Map.hpp  TuckerMPI_Matrix.cpp  TuckerMPI_Matrix.hpp  TuckerMPI_ProcessorGrid.cpp  TuckerMPI_ProcessorGrid.hpp  TuckerMPI_Tensor.cpp  TuckerMPI_Tensor.hpp  TuckerMPI_TuckerTensor.hpp  TuckerMPI_Util.cpp  TuckerMPI_Util.hpp  TuckerMPI_ttm.cpp  TuckerMPI_ttm.hpp
TuckerMPI/src/mpi/converter/: CMakeLists.txt  TuckerMPI_converter.cpp
TuckerMPI/src/mpi/drivers/: CMakeLists.txt  TuckerMPI_general_reconstruct.cpp  TuckerMPI_generate.cpp  TuckerMPI_gram.cpp  TuckerMPI_reconstruct.cpp  TuckerMPI_scaling.cpp  TuckerMPI_sthosvd.cpp
TuckerMPI/src/mpi/tests/: CMakeLists.txt  TuckerMPI_IO_test.cpp  TuckerMPI_bigGram0.cpp  TuckerMPI_gram0.cpp  TuckerMPI_gram1.cpp  TuckerMPI_gram2.cpp  TuckerMPI_new_gram_test_file.cpp  TuckerMPI_new_gram_test_file2.cpp  TuckerMPI_norm_test.cpp  TuckerMPI_normalize_test.cpp  TuckerMPI_oldGram0.cpp  TuckerMPI_old_gram_test_file.cpp  TuckerMPI_old_gram_test_file2.cpp  TuckerMPI_pack_data.cpp  TuckerMPI_pack_data2.cpp  TuckerMPI_pack_data3.cpp  TuckerMPI_part_rec_test.pl  TuckerMPI_reconstruct_test.cpp  TuckerMPI_shift_scale_test.cpp  TuckerMPI_slice_test.cpp  TuckerMPI_ttm_test.cpp  TuckerMPI_ttm_test_file.cpp
TuckerMPI/src/serial/: CMakeLists.txt  Tucker.cpp  Tucker.hpp  Tucker_IO_Util.cpp  Tucker_IO_Util.hpp  Tucker_Matrix.hpp  Tucker_Metric.hpp  Tucker_SizeArray.hpp  Tucker_SparseMatrix.cpp  Tucker_SparseMatrix.hpp  Tucker_Tensor.cpp  Tucker_Tensor.hpp  Tucker_Timer.cpp  Tucker_Timer.hpp  Tucker_TuckerTensor.hpp  Tucker_Util.cpp  Tucker_Util.hpp  Tucker_Vector.hpp
TuckerMPI/src/serial/compare/: CMakeLists.txt  Tucker_compare.cpp
TuckerMPI/src/serial/drivers/: CMakeLists.txt  LCBN_sthosvd.cpp  Tucker_general_reconstruct.cpp  Tucker_generate.cpp  Tucker_reconstruct.cpp  Tucker_sthosvd.cpp
TuckerMPI/src/serial/tests/: CMakeLists.txt  Tucker_IO_test.cpp  Tucker_eig_test.cpp  Tucker_gram_test_file.cpp  Tucker_gram_test_nofile.cpp  Tucker_norm_test.cpp  Tucker_normalize_test.cpp  Tucker_noscale_fullrec.py  Tucker_reconstruct_test.cpp  Tucker_reconstruct_test2.cpp  Tucker_shift_scale_test.cpp  Tucker_slice_test_file.cpp  Tucker_slice_test_nofile.cpp  Tucker_ttm_test_file.cpp  Tucker_ttm_test_nofile.cpp
backup/: corr_HOSVD.m  extractData.m  fast_HOSVD.m  realHOSVD.m
