INCLUDE_DIRECTORIES(.. ../../serial)

ADD_EXECUTABLE(TuckerMPI_converter TuckerMPI_converter.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_converter mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

SET(CMAKE_TUCKER_CONVERTER_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "binary directory of converter executable")

ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11.mpi)
   
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/2x3x4.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/2x3x4.mpi)
     
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm0.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_mm0.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm1.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_mm1.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm2.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_mm2.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_mm3.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_mm3.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc0.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_sc0.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc1.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_sc1.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc2.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_sc2.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_sc3.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_sc3.mpi)

ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss0.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_ss0.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss1.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_ss1.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss2.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_ss2.mpi)
        
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x5x7x11_ss3.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x5x7x11_ss3.mpi)
    
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/3x2_mult_transp.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/3x2_mult_transp.mpi)
   
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/4x3_mult.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/4x3_mult.mpi)
   
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/5x8_mult_transp.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/5x8_mult_transp.mpi)
   
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/2x5_mult.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/2x5_mult.mpi)
  
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/7x1_mult_transp.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/7x1_mult_transp.mpi)
   
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/1x7_mult.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/1x7_mult.mpi)
  
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/11x25_mult_transp.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/11x25_mult_transp.mpi)
  
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/17x11_mult.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/17x11_mult.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file0.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file0.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file1.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file1.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file2.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file2.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file3.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file3.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file4.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file4.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file5.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file5.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file6.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file6.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file7.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file7.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file8.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file8.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file9.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file9.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/io_file10.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/io_file10.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/tensor24.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/tensor24.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/tensor36.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/tensor36.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/tensor64.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/tensor64.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_data.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_data.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_result0.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_result0.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_result0t.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_result0t.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_result1.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_result1.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_result1t.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_result1t.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_result2.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_result2.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/ttm_result2t.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/ttm_result2t.mpi)
    
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_core.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/reconstruction/sthosvd_core.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_0.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/reconstruction/sthosvd_mat_0.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_1.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/reconstruction/sthosvd_mat_1.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_2.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/reconstruction/sthosvd_mat_2.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_3.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/reconstruction/sthosvd_mat_3.mpi)
ADD_CUSTOM_COMMAND(TARGET TuckerMPI_converter POST_BUILD
    COMMAND ${CMAKE_TUCKER_CONVERTER_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_converter ${CMAKE_SOURCE_DIR}/input_files/reconstruction/reconstructed.txt ${CMAKE_TUCKER_BINARY_INPUT_DIR}/reconstruction/sthosvd_reconstructed.mpi)